; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_eq.c_mlx4_test_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_eq.c_mlx4_test_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }
%struct.mlx4_priv = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [38 x i8] c"Failed mapping eq for interrupt test\0A\00", align 1
@MLX4_EQ_ASYNC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_test_interrupt(%struct.mlx4_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.mlx4_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx4_priv*, align 8
  %6 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %8 = call %struct.mlx4_priv* @mlx4_priv(%struct.mlx4_dev* %7)
  store %struct.mlx4_priv* %8, %struct.mlx4_priv** %5, align 8
  %9 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %10 = call i32 @mlx4_cmd_use_polling(%struct.mlx4_dev* %9)
  %11 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %12 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %13 = call i32 @get_async_ev_mask(%struct.mlx4_dev* %12)
  %14 = load %struct.mlx4_priv*, %struct.mlx4_priv** %5, align 8
  %15 = getelementptr inbounds %struct.mlx4_priv, %struct.mlx4_priv* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i64 @MLX4_CQ_TO_EQ_VECTOR(i32 %18)
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @mlx4_MAP_EQ(%struct.mlx4_dev* %11, i32 %13, i32 0, i32 %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %2
  %27 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %28 = call i32 @mlx4_warn(%struct.mlx4_dev* %27, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %36

29:                                               ; preds = %2
  %30 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %31 = call i32 @mlx4_cmd_use_events(%struct.mlx4_dev* %30)
  %32 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %33 = call i32 @mlx4_NOP(%struct.mlx4_dev* %32)
  store i32 %33, i32* %6, align 4
  %34 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %35 = call i32 @mlx4_cmd_use_polling(%struct.mlx4_dev* %34)
  br label %36

36:                                               ; preds = %29, %26
  %37 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %38 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %39 = call i32 @get_async_ev_mask(%struct.mlx4_dev* %38)
  %40 = load %struct.mlx4_priv*, %struct.mlx4_priv** %5, align 8
  %41 = getelementptr inbounds %struct.mlx4_priv, %struct.mlx4_priv* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %42, align 8
  %44 = load i64, i64* @MLX4_EQ_ASYNC, align 8
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i64 %44
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @mlx4_MAP_EQ(%struct.mlx4_dev* %37, i32 %39, i32 0, i32 %47)
  %49 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %50 = call i32 @mlx4_cmd_use_events(%struct.mlx4_dev* %49)
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local %struct.mlx4_priv* @mlx4_priv(%struct.mlx4_dev*) #1

declare dso_local i32 @mlx4_cmd_use_polling(%struct.mlx4_dev*) #1

declare dso_local i32 @mlx4_MAP_EQ(%struct.mlx4_dev*, i32, i32, i32) #1

declare dso_local i32 @get_async_ev_mask(%struct.mlx4_dev*) #1

declare dso_local i64 @MLX4_CQ_TO_EQ_VECTOR(i32) #1

declare dso_local i32 @mlx4_warn(%struct.mlx4_dev*, i8*) #1

declare dso_local i32 @mlx4_cmd_use_events(%struct.mlx4_dev*) #1

declare dso_local i32 @mlx4_NOP(%struct.mlx4_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
